--- a/first-react-component/index.html
+++ b/first-react-component/index.html
@@ -3,11 +3,12 @@
 <head>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 
 <body>
     <div id="root"></div> <!-- 실행결과:  <div id = "root"><button>Like</button></div> -->
-    <script>
+    <script type="text/babel">
         const e = React.createElement; /* Element 생성  */
         class LikeButton extends React.Component {
             constructor(props) {
@@ -22,13 +23,29 @@
                 /* e('태그이름','속성: 객체로, 낙타표기법','inerHTML') */
                 return e('button',
                     { onClick: () => { this.setState({ liked: true }) }, type: 'submit' },
-                    this.state.liked === true ? 'Liked' : 'Like') // <button onclick = "onclick">Like</button>태그를 만들겠다. 만든건 아님
+                    this.state.liked === true ? 'Liked' : 'Like'); // <button onclick = "onclick">Like</button>태그를 만들겠다. 만든건 아님
             }
-        }
+        };
+        class Button extends React.Component {
+            constructor(props) {
+                super(props);
+                this.state = {
+                    press: false,
+                };
+            }
+
+            render() {
+                return <button type="submit" onClick={() => { this.setState({ press: true }) }}>
+                    {this.state.press === false ? 'button' : 'pressed'}
+                </button>;
+            }
+        };
     </script>
-    <script>
+    <script type="text/babel">
         /* 대소문자 주의 */
         ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+        //ReactDOM.render(<Button />, document.querySelector('#root'));
+        ReactDOM.render(<div><Button /><Button /><Button /></div>, document.querySelector('#root'));
     </script>
 </body>
 
